--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 </div>
             </div>
             <textarea wrap="off" style="display:none;" id="input-text-edit"></textarea>
+            
         </div>
-
         <div class="footer">
             <div class="project-info" id="resize-stage-prompt-btn">
                 <span class="mdi mdi-resize" style="color:#FFD843; margin-left:5px; font-size: 16px;"></span>
@@ -154,7 +154,7 @@
             </div>
         </div>
     </div>
-    <div class="text-center widget-sm widget-black" id="widget-zoom" style="display:block;">
+    <div class="text-center widget-sm widget-black" id="widget-zoom">
         <div class="widget-body">
             <div class="row">
                 <span>Zoom</span>
