--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@
 
                 <button title="Plano de fundo com cor sólida" id="background-widget-btn"><i class="mdi mdi-image-album"
                         aria-hidden="true"></i><span class="btn-text">Plano de fundo</span></button>
-                <button title="Em breve..." id=""><i class="mdi mdi-artboard"></i><span
-                        class="btn-text">Soon</span></button>
+                <button title="Redimensionar o canvas" id="resize-stage-prompt-btn"><i class="mdi mdi-resize"></i><span
+                        class="btn-text">Redimensionar</span></button>
+                        
+                <button id="download" title="Exportar imagem"><i class="mdi mdi-export"></i><span
+                    class="btn-text">Exportar</span></button> 
+
                 <button title="Em breve..." id=""><i class="mdi mdi-artboard"></i><span
                         class="btn-text">Soon</span></button>
                 <button title="Em breve..." id=""><i class="mdi mdi-artboard" aria-hidden="true"></i><span
@@ -86,12 +90,9 @@
             
         </div>
         <div class="footer">
-            <div class="project-info" id="resize-stage-prompt-btn">
-                <span class="mdi mdi-resize" style="color:#FFD843; margin-left:5px; font-size: 16px;"></span>
+            <div class="project-info">
                 <span id="project-info">800 x 600</span>
             </div>
-            <button id="download" title="Exportar"
-            class="btn-mini btn-mini-yellow"><span class="mdi mdi-export"></span></button> 
         </div>
     </div>
     <div class="text-center widget-sm widget-black" id="widget-bg">
