--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <input id="currentLayer" style="display:none;" value="0">
             <input id="selectedShape" style="display:none;" value="0">
-            <div class="preview-img" id="preview">
+            <div class="preview-img detect-zoom" id="preview">
                 <div class="editor zoom" id="stage-parent">
                     <div class="" id="container">
                         
