--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
             <div class="project-info">
                 <span id="project-info">800 x 600</span>
             </div>
+            <div class="project-info">
+                <span>Zoom</span>
+                <div class="slidecontainer col-12">
+                    <input class="slider2" original-scale="" type="range" id="zoom-slider" object-id="0" min="0.01"
+                        max="2" step="0.01" value="1">
+                    <div class="col-2">
+                        <span id="reset-zoom" title="Resetar valor padrão" class="fa fa-refresh" aria-hidden="true"></span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="text-center widget-sm widget-black" id="widget-bg">
@@ -155,20 +165,7 @@
             </div>
         </div>
     </div>
-    <div class="text-center widget-sm widget-black" id="widget-zoom">
-        <div class="widget-body">
-            <div class="row">
-                <span>Zoom</span>
-                <div class="slidecontainer col-12">
-                    <input class="slider2" original-scale="" type="range" id="zoom-slider" object-id="0" min="0.01"
-                        max="2" step="0.01" value="1">
-                    <div class="col-2">
-                        <i id="reset-zoom" title="Resetar valor padrão" class="fa fa-refresh" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
     <div class="text-center widget-sm widget-black widget-fixed" id="widget-draw">
         <button type="button" class="close" style="color:white; margin-right:2px;">&times;</button>
         <div class="widget-body">
