--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <div class="btn-mini-wrapper btn-right">
                 <button id="open-layers-btn" title="Camadas"
                 class="btn-mini"><span class="mdi mdi-layers"></span></button>
+                <button id="download" class="btn-mini" title="Exportar imagem"><i class="mdi mdi-export"></i></button> 
             </div>
        
         </div>
@@ -66,12 +67,8 @@
 
                 <button title="Plano de fundo com cor sólida" id="background-widget-btn"><i class="mdi mdi-image-album"
                         aria-hidden="true"></i><span class="btn-text">Plano de fundo</span></button>
-                <button title="Redimensionar o canvas" id="resize-stage-prompt-btn"><i class="mdi mdi-resize"></i><span
-                        class="btn-text">Redimensionar</span></button>
-                        
-                <button id="download" title="Exportar imagem"><i class="mdi mdi-export"></i><span
-                    class="btn-text">Exportar</span></button> 
-
+                <button title="Em breve..." id=""><i class="mdi mdi-artboard"></i><span
+                        class="btn-text">Soon</span></button>
                 <button title="Em breve..." id=""><i class="mdi mdi-artboard"></i><span
                         class="btn-text">Soon</span></button>
                 <button title="Em breve..." id=""><i class="mdi mdi-artboard" aria-hidden="true"></i><span
