--- a/index.html
+++ b/index.html
@@ -430,10 +430,10 @@
     </div>
     <div class="text-center widget-lg widget-black widget-fixed" id="widget-fonts">
         
-        <button type="button" class="close" id="close-edit" style="color:white;  margin-right:2px;">&times;</button>
+        <button type="button" class="close" id="close-edit" style="color:white; padding: 5px;  margin-right:2px; left:0; transform: translate(0,-80%); position: absolute; background: rgba(47, 51, 54, 1); font-size: 12px; border-radius: 3px 3px 0px 0px;">Fechar</button>
         <div class="widget-body">
             <div class="font-container">
-                    <div title="Selecione a fonte" id="text-font-edit" class="font-select">
+                    <div id="text-font-edit" class="font-select">
                         <span class="font-item" value="Alex Brush"
                             style="font-family: &quot;Alex Brush&quot;; display: block;">Alex Brush</span>
                         <span class="font-item" value="Allerta" style="font-family: Allerta; display: block;">
