--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         </div>
         
     </div>
-    <div class="text-center widget-sm widget-gray widget-fixed" id="widget-settings-text" style="display:block; position:absolute; top:50%;">
+    <div class="text-center widget-sm widget-gray widget-fixed" id="widget-settings-text"">
         
         <button type="button" class="close" id="close-edit" style="color:white; padding: 5px;  margin-right:2px; left:0; transform: translate(0,-80%); position: absolute; background: rgba(47, 51, 54, 1); font-size: 12px; border-radius: 3px 3px 0px 0px;">Fechar</button>
         <div class="widget-body">
