--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     </div>
     <div class="text-center widget-sm widget-black" id="widget-bg">
         <div class="widget-body">
+            <span>Plano de fundo</span>
             <div class="slidecontainer">
-
                 <div title="Troque a cor do fundo"
                     style="position: relative; display: inline-block; width: 50px; height: 50px;">
                     <button id="bg-color-button" class="btn btn-small">
@@ -536,7 +536,7 @@
         </div>
         
     </div>
-    <div class="text-center widget-sm widget-gray widget-fixed" id="widget-settings-text"">
+    <div class="text-center widget-sm widget-gray widget-fixed" id="widget-settings-text">
         
         <button type="button" class="close" id="close-edit" style="color:white; padding: 5px;  margin-right:2px; left:0; transform: translate(0,-80%); position: absolute; background: rgba(47, 51, 54, 1); font-size: 12px; border-radius: 3px 3px 0px 0px;">Fechar</button>
         <div class="widget-body">
