--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
             </div>
         </div>
     </div>
-    <div class="text-center widget-sm widget-black" id="widget-bg">
+    <div class="text-center widget-sm widget-black widget-fixed" id="widget-bg">
+        <button type="button" class="close" style="color:white; margin-right:2px;">&times;</button>
         <div class="widget-body">
             <span>Plano de fundo</span>
             <div class="slidecontainer">
