--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         <div class="widget-body">
             <div class="font-container">
                     <div id="text-font-edit" class="font-select">
-                        <input id="input-import" type="file" name="input-import" accept=".gproject" style="display: none;" />
+                        <input id="input-import" type="file" name="input-import" accept=".gproj" style="display: none;" />
                             <div class="slidecontainer" id="import">
                                 <button class="btn-mini" title="Carregar projeto do seu dispositivo"><i class="mdi mdi-upload-box"></i></button>
                                 <span>Carregar projeto</span>
