--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="editor-panel">
                 <button id="new-prompt" title="Inicie um novo projeto"><i
                     class="mdi mdi-file-plus"></i><span class="btn-text">Novo</span></button>
-                <button title="Plano de fundo com cor sólida" id="background-widget-btn"><i class="mdi mdi-image-album"
+                <button title="Modelos" id="background-widget-btn"><i class="mdi mdi-image-album"
                     aria-hidden="true"></i><span class="btn-text">Modelos</span></button>
                 <button id="add-image" title="Adicione uma imagem"><i
                         class="mdi mdi-file-image-plus"></i><span class="btn-text">Imagem</span></button>
@@ -111,7 +111,7 @@
     <div class="text-center widget-sm widget-black widget-fixed" id="widget-bg">
         <button type="button" class="close" style="color:white; margin-right:2px;">&times;</button>
         <div class="widget-body">
-            <span>Plano de fundo</span>
+            <span>Modelos</span>
             <div class="slidecontainer">
                 <div title="Troque a cor do fundo"
                     style="position: relative; display: inline-block; width: 50px; height: 50px;">
