--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="editor-panel">
                 <button id="new-prompt" title="Inicie um novo projeto"><i
                     class="mdi mdi-file-plus"></i><span class="btn-text">Novo</span></button>
-                <button title="Plano de fundo com cor sólida" id="background-widget-btn"><i class="mdi mdi-image-album"
+                <button title="Modelos" id="background-widget-btn"><i class="mdi mdi-image-album"
                     aria-hidden="true"></i><span class="btn-text">Modelos</span></button>
                 <button id="add-image" title="Adicione uma imagem"><i
                         class="mdi mdi-file-image-plus"></i><span class="btn-text">Imagem</span></button>
@@ -230,7 +230,7 @@
     <div class="text-center widget widget-fixed widget-black" id="add-background-widget">
         <div class="widget-header">
 
-            <i class="mdi mdi-cursor-move" style="margin:10px; float:left; font-size:14px;"> Plano de fundo</i>
+            <i class="mdi mdi-cursor-move" style="margin:10px; float:left; font-size:14px;"> Modelos</i>
 
             <button type="button" class="close" id="close-edit" style="color:white;  margin-right:2px;">&times;</button>
         </div>
