--- a/index.html
+++ b/index.html
@@ -684,6 +684,8 @@
 
 <script src="https://unpkg.com/konva@9.3.18/konva.min.js"></script>
 <script src="js/editor.js"></script>
+<script src="js/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script
 
 <script>
 
