feat: opção de duplicar pagina

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="text-center widget-sm widget-black widget-fixed" id="widget-bg">
         <button type="button" class="close" style="color:white; margin-right:2px;">&times;</button>
         <div class="widget-body">
-            <span>Modelos</span>
+            <span>Plano de fundo</span>
             <div class="slidecontainer">
                 <div title="Troque a cor do fundo"
                     style="position: relative; display: inline-block; width: 50px; height: 50px;">
@@ -130,6 +130,23 @@
                     <i class="mdi mdi-close" style="font-size: 20px; color: white;"></i>
                 </button>
 
+            </div>
+        </div>
+
+
+    </div>
+    <div class="text-center widget-sm widget-gray widget-fixed" id="widget-page">
+        <button type="button" class="close" id="close-edit" style="color:white; padding: 5px;  margin-right:2px; left:0; transform: translate(0,-80%); position: absolute; background: rgba(47, 51, 54, 1); font-size: 12px; border-radius: 3px 3px 0px 0px;">Fechar</button>
+        <div class="widget-body">
+            <span>Opções</span>
+            <div class="slidecontainer">
+                <input type="text" id="selected-page" page_id="" style="display:none;">
+                    <button title="Apagar pagina" class="btn btn-small btn-delete-layer btn-danger">
+                        <i class="mdi mdi-delete-forever-outline" aria-hidden="true"></i>
+                    </button>
+
+                    <button title="Duplicar pagina" class="btn btn-small btn-primary" title="Duplicar camada"
+                    id="duplicate-layer"><i class="mdi mdi-content-duplicate" aria-hidden="true"></i></button>
             </div>
         </div>
 
