fix: Arrumado problema de editar texto direto do canva

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <div class="widget-body">
 
             <textarea class="text-input" id="input-text" placeholder="Adicionar um texto" row="40" cols="20"></textarea>
-            <button id="addText" class="btn-add-text"><i class="mdi mdi-send-check"></i></button>
+            <button id="addText" class="btn-add-text"><i class="mdi mdi-send-circle"></i></button>
         </div>
     </div>
 
