fix: undo redo (ctrl z e y)

--- a/index.html
+++ b/index.html
@@ -687,7 +687,9 @@
             </div>
         </div>
     </div>
+<div id="shape-border" class="shape-border">
 
+</div>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
