fix: corrigido bug de começar um novo projeto
corrigido bug que impeda de começar um novo projeto

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     value="600" aria-describedby="basic-addon1">
             </div>
         </div>
-        <button id="new-image" class="btn-add-text btn-yellow">Confirmar</button>
+        <button id="new-image" class="btn-confirm btn-yellow">Confirmar</button>
     </div>
     <div class="text-center widget-sm widget-gray widget-fixed" id="resize-stage-prompt">
         <div class="widget-header">
@@ -330,7 +330,7 @@
                     value="600" aria-describedby="basic-addon1">
             </div>
         </div>
-        <button id="resize-stage" class="btn-add-text btn-yellow">Confirmar</button>
+        <button id="resize-stage" class="btn-confirm  btn-yellow">Confirmar</button>
     </div>
 
 
