--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <button id="redo" title="Refazer" disabled class="btn btn-xsmall btn-right-round disabled"><span
                             class="mdi mdi-arrow-u-right-top"></span></button>
                 </div>
-                <div class="btn-mini-wrapper btn-right">
-                    <button id="export-prompt" class="btn-mini" title="Exportar imagem"><i class="mdi mdi-export"></i></button> 
+                <div id="export-prompt" class="btn-export-wrapper btn-right btn-yellow">
+                <span class="mdi mdi-export"></span>Exportar
                 </div>
            
             </div> 
