fix: arrumado bugs com background e texto

--- a/index.html
+++ b/index.html
@@ -625,12 +625,12 @@
             </div>
 
         </div> 
-        <div class="menu-container-bottom" id="import">
-            <div class="menu-btn">
+        <div class="menu-container-bottom">
+            <div class="menu-btn" id="import">
                 <button class="btn-mini" title="Carregar projeto do seu dispositivo"><i class="mdi mdi-folder-open-outline"></i></button>
                 <span>Abrir</span>
             </div>
-            <div class="menu-btn">
+            <div class="menu-btn" id="save">
                 <button class="btn-mini" title="Salvar projeto"><i class="mdi mdi-content-save"></i></button>
                 <span>Salvar projeto</span>
             </div>
