--- a/index.html
+++ b/index.html
@@ -595,7 +595,14 @@
                                 </div>
                                 <input type="range" disabled id="contrast" object-id="0" min="-100" max="100" step="1" value="0">
                             </div>
-                        </div>                        
+                        </div>                           <div class="slidecontainer">
+                            <div class="slider2">
+                                <div class="filter-info">
+                                    <span class="name">Transparencia</span>
+                                </div>
+                                <input type="range" class="slider-opacity" title="stefd" min="0" max="1" class="slider" step="0.01">
+                            </div>
+                        </div>                      
                     </div>
                 </div>
         </div>      
@@ -609,7 +616,7 @@
                         <div class="row">
                             <span>Transparencia</span>
                             <div class="slidecontainer">
-                                <input type="range" title="stefd" min="0" max="1" class="slider" id="opacity" step="0.01">
+                                <input type="range" class="slider-opacity" title="stefd" min="0" max="1" class="slider" step="0.01">
                             </div>
                         </div>                       
 
