change: Melhorado sistema de desenho

--- a/index.html
+++ b/index.html
@@ -637,6 +637,10 @@
                     </div>
                     <button title="Deletar linha" class="btn-delete btn btn-small"><i
                         class="fa-solid fa-trash-can"></i></button>
+                    <button title="Adicionar articulação" id="add-handle" class="btn btn-small"><i
+                        class="mdi mdi-triangle-wave"></i></button>
+                        <button title="Limites arredondados" id="round-line" class="btn btn-small"><i
+                            class="mdi mdi-rounded-corner"></i></button>
 
                     <div class="row">
                         <span class="name">Tamanho </span>
