--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="item item-proj" proj="assets/models/cartao de visita.gproj">
                     <img class="item-model" src="images/models/cartao.png" alt="" />
                 </div>
-                <div class="item item-proj" proj="assets/models/cartao de visita 2.gproj">
+                <div class="item item-proj" proj="https://drive.google.com/file/d/1lkWprgJiFbipDC8NzzD0G37U8Kj2K1eF/view?usp=drive_link">
                     <img class="item-model" src="images/models/cartao 2.png" alt="" />
                 </div>
                 <div class="item item-proj" proj="assets/models/cartao de visita 3.gproj">
@@ -285,6 +285,9 @@
                 </div>
                 <div class="item item-proj" proj="assets/models/Post instagram.gproj">
                     <img class="item-model" src="images/models/Post instagram.png" alt="" />
+                </div>
+                <div class="item item-proj" proj="assets/models/Post instagram 2.gproj">
+                    <img class="item-model" src="images/models/Post instagram 2.png" alt="" />
                 </div>
             </div>
         </div>
