--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+    <div class="loading"><div class="lds-dual-ring"></div></div>
     <div class="container2">
         <div class="header-editor">
             <div class="row2">
@@ -274,19 +275,19 @@
         <div class="widget-body">
 
             <div class="model-btn-area" id="model-btn-area">
-                <div class="item item-proj" proj="assets/models/cartao de visita.gproj">
+                <div class="item item-proj" proj="https://drive.google.com/uc?id=1_f8UpZKXmHjNCnJVeCV9y7VjbKQb0WAu&export=download">
                     <img class="item-model" src="images/models/cartao.png" alt="" />
                 </div>
                 <div class="item item-proj" proj="https://drive.google.com/uc?id=1lkWprgJiFbipDC8NzzD0G37U8Kj2K1eF&export=download">
                     <img class="item-model" src="images/models/cartao 2.png" alt="" />
                 </div>
-                <div class="item item-proj" proj="assets/models/cartao de visita 3.gproj">
+                <div class="item item-proj" proj="https://drive.google.com/uc?id=1Zx9mBWW17JsYe01ZrdBa_tQ1bpPuI3ws&export=download">
                     <img class="item-model" src="images/models/cartao 3.png" alt="" />
                 </div>
-                <div class="item item-proj" proj="assets/models/Post instagram.gproj">
+                <div class="item item-proj" proj="https://drive.google.com/uc?id=1fsOOzGtZmC42wCRDsEfvSDuC5cOzQluG&export=download">
                     <img class="item-model" src="images/models/Post instagram.png" alt="" />
                 </div>
-                <div class="item item-proj" proj="assets/models/Post instagram 2.gproj">
+                <div class="item item-proj" proj="https://drive.google.com/uc?id=1AUwfqbFhh9e8j_Akq8Stg1UiijSGND1W&export=download">
                     <img class="item-model" src="images/models/Post instagram 2.png" alt="" />
                 </div>
             </div>
