fix: Consertado redimensionar

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                         aria-hidden="true"></i><span class="btn-text">Pincel</span></button>
                 <button id="draw-line" title="Desenhar uma linha" id="btn-widget-draw-line"><i class="mdi mdi-vector-line"
                      aria-hidden="true"></i><span class="btn-text">Linha</span></button>
-                <button title="Em breve..." id=""><i class="mdi mdi-artboard" aria-hidden="true"></i><span
-                        class="btn-text">Soon</span></button>
+                <button title="Em breve..." class="resize-stage-prompt-btn" id=""><i class="mdi mdi-resize" aria-hidden="true"></i><span
+                        class="btn-text">Redimensionar</span></button>
                 <button title="Em breve..." id=""><i class="mdi mdi-artboard" aria-hidden="true"></i><span
                         class="btn-text">Soon</span></button>
 
@@ -98,7 +98,7 @@
                 </div>
         </div>
         <div class="footer">
-            <div class="project-info" id="resize-stage-prompt-btn">
+            <div class="project-info resize-stage-prompt-btn" id="resize-stage-prompt-btn">
                 <span id="project-info">800 x 600</span>
                 <span class="mdi mdi-resize"></span>
             </div>
@@ -287,7 +287,7 @@
                 <div class="item item-proj" proj="https://drive.google.com/uc?id=1fsOOzGtZmC42wCRDsEfvSDuC5cOzQluG&export=download">
                     <img class="item-model" src="images/models/Post instagram.png" alt="" />
                 </div>
-                <div class="item item-proj" proj="https://drive.google.com/uc?id=1TevhqpD1Lt03qh7UcAEuFGs2Q-WBEVwW&export=download">
+                <div class="item item-proj" proj="https://drive.google.com/uc?id=18GmKbwbAhVx99aMMG3zbghY_veq2_zNG&export=download">
                     <img class="item-model" src="images/models/Post instagram 2.png" alt="" />
                 </div>
             </div>
