--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
                                 </div>
                                 <input type="range" disabled id="contrast" object-id="0" min="-100" max="100" step="1" value="0">
                             </div>
-                        </div>                           <div class="slidecontainer">
+                        </div>
+                        <div class="slidecontainer">
                             <div class="slider2">
                                 <div class="filter-info">
                                     <span class="name">Transparencia</span>
